--- a/webroot/mobile/html/jifen/html/choose_good.html
+++ b/webroot/mobile/html/jifen/html/choose_good.html
@@ -6,7 +6,7 @@
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title>选择商品</title>
+        <title>换积分了-选择商品</title>
         <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
