--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -6,24 +6,25 @@
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title>积分换-个人主页</title>
+        <title>换积分了-个人主页</title>
         <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
-        <header style="height: 173px;">
+        <header style="height: 173px;padding: 0;">
             <div class="inner">
-                <h1 class="home_head" style="font-size: 22px;">积分换<a href="login.html" class="quit_login fr">退出登录</a></h1>
+                <h1 class="home_head" style="font-size: 22px;background: url('../images/logo.png') no-repeat 116px 8px;background-size: 20px 25px;">换积分了<a href="login.html" class="quit_login fr">退出登录</a></h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
-
                     <div class="home_head_info">
                         <a href="javascript:void(0)" class="mobilenum" id="nickName" style="font-size: 19px;"></a>
                         <h1 style="font-size: 15px;margin: 20px 0 0 2px;text-align: left;padding-left: 29px;"><span id="jifen">0</span> 积分</h1>
                     </div>
-
+                    <a href="guide.html" style="float: right;margin-top: 25px;">
+                        <img src='../images/newuser.png' style="width: 63px;" />
+                    </a>
                 </div>
             </div>
         </header>
@@ -47,7 +48,7 @@
                     <div class="con clearfix">
                         <div class="home_select_type">
                             <span class="fz16">手机号码</span>
-                            <input type="text" value="" name="chargePhone" />
+                            <input type="text" value="" name="chargePhone" id="chargePhone"/>
                         </div>
                         <div class="home_select_type">
                             <span class="cm fz16">串  码</span>
@@ -111,14 +112,14 @@
         <option value="{##}">20.0</option>
     </script>
     <script type="text/javascript">
-        if (!$.func.getCookie('phone')) {
-            location.href = 'login.html';
-        }
+//        if (!$.func.getCookie('phone')) {
+//            location.href = 'login.html';
+//        }
         $('#nickName').html($.func.getCookie('phone'));
         var src = $.func.getCookie('headImgUrl') === null ? $.func.getCookie('headImgUrl') : '../images/tx.png';
         $('#avatar').attr('src', src);
         $.func.homePageProduct();
-        $.func.chargeMoney();
+        
         $('.submitbtn').on('click', function () {
             var chargePhone = $('input[name="chargePhone"]').val();
             if (!chargePhone) {
@@ -144,6 +145,22 @@
             $('.tips').hide();
         });
 
+		
+		$(function(){  
+			$('#chargePhone').bind('input propertychange', function() {  
+				//alert($(this).val());
+				if($(this).val().length >= 11){
+					var reg = /^0?1[3|4|5|7|8][0-9]\d{8}$/;
+					if (!reg.test($(this).val())) {
+						alert('请填写正确的手机号码');
+						return;
+					}
+					//获取可兑换金额
+					$.func.chargeMoney($(this).val());
+				}
+			});  
+		  
+		})  
     </script>
 </body>
 </html>
