--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -15,7 +15,7 @@
     <body>
         <header style="height: 173px;padding: 0;">
             <div class="inner">
-                <h1 class="home_head" style="font-size: 22px;background: url('../images/logo.png') no-repeat 116px 8px;background-size: 20px 25px;">换积分了<a href="login.html" class="quit_login fr">退出登录</a></h1>
+                <h1 class="home_head" style="font-size: 22px;"><span class='title'>换积分了</span><a href="login.html" class="quit_login fr">退出登录</a></h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
                     <div class="home_head_info">
