--- a/webroot/mobile/html/jifen/html/exchange_cash.html
+++ b/webroot/mobile/html/jifen/html/exchange_cash.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="../js/des.js"></script>
     </head>
     <body>
         <header>
@@ -43,8 +44,8 @@
             </div>
         </div>
         <script>
-            $('.nochoose').on('click', function(){
-                if($(this).hasClass('choose')){
+            $('.nochoose').on('click', function () {
+                if ($(this).hasClass('choose')) {
                     return false;
                 } else {
                     $(this).addClass('choose');
@@ -52,20 +53,20 @@
                     $('input[name="type"]').val($(this).attr('payType'));
                 }
             });
-            
-            $('#submit').on('click', function(){
-                if($('input[name="type"]').val() == 1 && $('input[name="wx"]').val() == ''){
+
+            $('#submit').on('click', function () {
+                if ($('input[name="type"]').val() == 1 && $('input[name="wx"]').val() == '') {
                     alert('请输入您的微信账号');
                     return false;
                 }
-                if($('input[name="type"]').val() == 2 && $('input[name="ali"]').val() == ''){
+                if ($('input[name="type"]').val() == 2 && $('input[name="ali"]').val() == '') {
                     alert('请输入您的微支付宝账号');
                     return false;
                 }
-                if($('input[name="type"]').val() == 1){
-                    $.func.exchangeCash($.func.getUrlParam('id'), '微信:'+$('input[name="wx"]').val());
+                if ($('input[name="type"]').val() == 1) {
+                    $.func.exchangeCash($.func.getUrlParam('id'), '微信:' + $('input[name="wx"]').val());
                 } else {
-                    $.func.exchangeCash($.func.getUrlParam('id'), '支付宝:'+$('input[name="ali"]').val());
+                    $.func.exchangeCash($.func.getUrlParam('id'), '支付宝:' + $('input[name="ali"]').val());
                 }
             });
         </script>
