--- a/webroot/mobile/html/jifen/html/guide.html
+++ b/webroot/mobile/html/jifen/html/guide.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="../js/des.js"></script>
     </head>
     <body style="height: 100%">
         <header>
