--- a/webroot/mobile/html/jifen/html/choose_good.html
+++ b/webroot/mobile/html/jifen/html/choose_good.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="../js/des.js"></script>
     </head>
     <body>
         <header>
