--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -11,18 +11,19 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="../js/des.js"></script>
     </head>
     <body>
         <header style="height: 173px;padding: 0;">
             <div class="inner">
-                <h1 class="home_head" style="font-size: 22px;"><span class='title'>换积分了</span><a href="login.html" class="quit_login fr">退出登录</a></h1>
+                <h1 class="home_head" style="font-size: 22px;"><span class='title'>换积分了</span><a href="javascript:location.href='login.html?channelId='+$.func.getUrlParam('channelId')" class="quit_login fr">退出登录</a></h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
                     <div class="home_head_info">
                         <a href="javascript:void(0)" class="mobilenum" id="nickName" style="font-size: 19px;"></a>
                         <h1 style="font-size: 15px;margin: 20px 0 0 2px;text-align: left;padding-left: 29px;"><span id="jifen">0</span> 积分</h1>
                     </div>
-                    <a href="guide.html" style="float: right;margin-top: 25px;">
+                    <a href="javascript:location.href='guide.html?channelId='+$.func.getUrlParam('channelId')" style="float: right;margin-top: 25px;">
                         <img src='../images/newuser.png' style="width: 63px;" />
                     </a>
                 </div>
@@ -34,7 +35,7 @@
                     <div style="width: 3px;height: 16px;background-color: #01c6fa;float: left;position: relative;top: 13px;left: 12px;"></div>
                     <div class="inner clearfix" style="border-bottom:1px #ddd solid;border-top:1px #ddd solid;background-color: white;">
                         <span class="fl item_title_r_name" style="font-size: 16px;">兑换商品</span>
-                        <a href="allgoods.html" class="fr color_items more" >查看更多</a>
+                        <a href="javascript:location.href='allgoods.html?channelId='+$.func.getUrlParam('channelId')" class="fr color_items more" >查看更多</a>
                     </div>
                 </div>
                 <div class="items_con" id="product">
@@ -75,7 +76,7 @@
                 </div>
             </div>-->
             <div class="home_infolist mt5 mb5" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
-                <a href="integral_query.html" class="ablock">
+                <a href="javascript:location.href='integral_query.html?channelId='+$.func.getUrlParam('channelId')" class="ablock">
                     <div class="inner home_top_con clearfix">
                         <span class="home_leftcon fl fz16">积分查询</span>
                         <i class="home_rightico fr"></i>
@@ -83,7 +84,7 @@
                 </a>
             </div>
             <div class="home_infolist mb5" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
-                <a href="order_query.html" class="ablock">
+                <a href="javascript:location.href='order_query.html?channelId='+$.func.getUrlParam('channelId')" class="ablock">
                     <div class="inner home_top_con clearfix">
                         <span class="home_leftcon fl bind fz16">订单查询</span>
                         <i class="home_rightico fr"></i>
@@ -112,14 +113,14 @@
         <option value="{##}">20.0</option>
     </script>
     <script type="text/javascript">
-//        if (!$.func.getCookie('phone')) {
-//            location.href = 'login.html';
-//        }
+        if (!$.func.getCookie('phone')) {
+            location.href = 'login.html?channelId=' + $.func.getUrlParam('channelId');
+        }
         $('#nickName').html($.func.getCookie('phone'));
         var src = $.func.getCookie('headImgUrl') === null ? $.func.getCookie('headImgUrl') : '../images/tx.png';
         $('#avatar').attr('src', src);
         $.func.homePageProduct();
-        
+
         $('.submitbtn').on('click', function () {
             var chargePhone = $('input[name="chargePhone"]').val();
             if (!chargePhone) {
@@ -145,22 +146,21 @@
             $('.tips').hide();
         });
 
-		
-		$(function(){  
-			$('#chargePhone').bind('input propertychange', function() {  
-				//alert($(this).val());
-				if($(this).val().length >= 11){
-					var reg = /^0?1[3|4|5|7|8][0-9]\d{8}$/;
-					if (!reg.test($(this).val())) {
-						alert('请填写正确的手机号码');
-						return;
-					}
-					//获取可兑换金额
-					$.func.chargeMoney($(this).val());
-				}
-			});  
-		  
-		})  
+        // 输入手机号码超过11位，异步加载可兑换金额
+        $(function () {
+            $('#chargePhone').bind('input propertychange', function () {
+                //alert($(this).val());
+                if ($(this).val().length >= 11) {
+                    var reg = /^0?1[3|4|5|7|8][0-9]\d{8}$/;
+                    if (!reg.test($(this).val())) {
+                        alert('请填写正确的手机号码');
+                        return;
+                    }
+                    //获取可兑换金额
+                    $.func.chargeMoney($(this).val());
+                }
+            });
+        });
     </script>
 </body>
 </html>
