--- a/webroot/mobile/html/jifen/html/order_query.html
+++ b/webroot/mobile/html/jifen/html/order_query.html
@@ -11,11 +11,12 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="../js/des.js"></script>
     </head>
     <body>
         <header>
             <div class="inner">
-                <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="location.href='home.html'"></h1><h1>订单查询</h1>
+                <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="location.href='home.html?channelId='+$.func.getUrlParam('channelId')"></h1><h1>订单查询</h1>
                 <div class="order_total" id="order_detail" hidden>
                     <span><i id="totalOrders">0</i>订单总计 ( 笔 )</span>
                     <span><i id="totalMoney">0</i>总计金额 ( 元 )</span>
