--- a/webroot/mobile/html/jifen/html/phone_charge.html
+++ b/webroot/mobile/html/jifen/html/phone_charge.html
@@ -6,7 +6,7 @@
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title>换积分了-流量充值</title>
+        <title>换积分了-话费充值</title>
         <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
@@ -17,7 +17,7 @@
         <header>
             <div class="inner">
                 <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="history.go(-1)"></h1>
-                <h1>流量充值</h1>
+                <h1>话费充值</h1>
             </div>
         </header>
         <div class="wraper">
@@ -37,7 +37,7 @@
                     alert('请输入您需要充值的手机号码');
                     return false;
                 }
-                $.func.flowRecharge($.func.getUrlParam('id'), $('input[name="recharge_phone"]').val());
+                $.func.phoneCharge($.func.getUrlParam('id'), $('input[name="recharge_phone"]').val());
             });
         </script>
     </body>
