--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -105,7 +105,7 @@
                 <dl>
                     <dt><img src="{#img#}"/></dt>
                     <dd class="items_price">￥ {#exchangePrice#}</dd>
-                    <dd>{#productName#}</dd>
+                    <dd class='productName'>{#productName#}</dd>
                 </dl>
             </div>
         </script>
