--- a/webroot/mobile/app/download.html
+++ b/webroot/mobile/app/download.html
@@ -13,17 +13,54 @@
             .cover span{color:#fff;}
             .download_des span{display: block;font-size: 15px;line-height: 26px;margin-top:200px;}
         </style>
+        <link rel="stylesheet" type="text/css" href="../css/common.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+        <script type="text/javascript">
+            (function (win) {
+                var h;
+                var docEl = document.documentElement;
+                function setUnitA() {
+                    var clientWidth = docEl.clientWidth;
+                    if (!clientWidth) {
+                        return
+                    }
+                    if (clientWidth > 750) {
+                        docEl.style.fontSize = 100 + "px"
+                    } else {
+                        docEl.style.fontSize = 100 * (clientWidth / 750) + "px"
+                    }
+                }
+                win.addEventListener("resize", function () {
+                    clearTimeout(h);
+                    h = setTimeout(setUnitA, 300)
+                }, false);
+                win.addEventListener("pageshow", function (e) {
+                    if (e.persisted) {
+                        clearTimeout(h);
+                        h = setTimeout(setUnitA, 300)
+                    }
+                }, false);
+                setUnitA()
+            })(window);
+        </script>
     </head>
     <body>
-    <div class="download_des" id="download_des">
+<!--    <div class="download_des" id="download_des">
         <span onclick="location.href = 'https://itunes.apple.com/us/app/bing-gou-bang/id1156402644?l=zh&ls=1&mt=8'">如果没有下载,请在浏览器上打开此页面<br>(点击右上角,使用浏览器打开)<br><br><br><br></span>
         <span id="msg"></span>
+    </div>-->
+<div class="wraper">
+    <div class="reg-shadow" id="shadow"></div>
+    <div class="sharetowx" id="share_wx">
+        <div class="point">
+            <img src="../images/sharetowx.png"/>
+        </div>
     </div>
-
+    </div>
     <script>
         if(/iphone|mac|ipod|ipad/i.test(navigator.userAgent.toLocaleLowerCase())){
             location.href = 'https://itunes.apple.com/us/app/bing-gou-bang/id1156402644?l=zh&ls=1&mt=8';
-            document.getElementById('msg').innerHTML='如果iOS10用户跳转失败,请在appstore中搜索"并购帮"';
+//            document.getElementById('msg').innerHTML='如果iOS10用户跳转失败,请在appstore中搜索"并购帮"';
         }
         else{
             location.href = 'http://m.chinamatop.com/mobile/app/bgq.apk';
