--- a/webroot/mobile/html/jifen/html/allgoods.html
+++ b/webroot/mobile/html/jifen/html/allgoods.html
@@ -30,7 +30,7 @@
                 <dl>
                     <dt><img src="{#img#}"/></dt>
                     <dd class="items_price">￥ {#exchangePrice#}</dd>
-                    <dd>{#productName#}</dd>
+                    <dd class="productName">{#productName#}</dd>
                 </dl>
             </div>
         </script>
