--- a/webroot/mobile/app/download.html
+++ b/webroot/mobile/app/download.html
@@ -49,7 +49,7 @@
         <span onclick="location.href = 'https://itunes.apple.com/us/app/bing-gou-bang/id1156402644?l=zh&ls=1&mt=8'">如果没有下载,请在浏览器上打开此页面<br>(点击右上角,使用浏览器打开)<br><br><br><br></span>
         <span id="msg"></span>
     </div>-->
-<div class="wraper">
+<div class="wraper" style="background: url('../images/background.png') no-repeat;background-size:100%;height: 100%;">
     <div class="reg-shadow" id="shadow"></div>
     <div class="sharetowx" id="share_wx">
         <div class="point">
