--- a/webroot/mobile/html/jifen/html/phone_charge.html
+++ b/webroot/mobile/html/jifen/html/phone_charge.html
@@ -22,8 +22,8 @@
         </header>
         <div class="wraper">
             <div class="withdraw_cash_box">
-                <div class="inner">
-                    <h3><img src="../images/flow.png" style="width:100%;height:auto;" /></h3>
+                <div class="inner" style="padding: 0;">
+                    <h3 style="margin: 0;"><img src="../images/phone-charge.png" style="width:100%;height:auto;" /></h3>
                     <div style="width:290px;height: 45px;background-color: white;margin: 21px auto 0;border: 1px solid #e5e5e5;text-align: center">
                         <input class="fz16" type="number" name="recharge_phone" placeholder="请输入你的手机号码" style="text-align: center;line-height: 45px;" />
                     </div>
