--- a/webroot/mobile/html/jifen/html/login.html
+++ b/webroot/mobile/html/jifen/html/login.html
@@ -23,8 +23,14 @@
             <div class="login_box">
                 <div class="inner">
                     <ul>
-                        <li class="username"><span>账&nbsp;&nbsp;&nbsp;号：</span><input type="number" id="username"  placeholder="请输入手机号" style="line-height: 21px;" /></li>
-                        <li class="validate"><span>邀请码：</span><input type="number" id="valid" placeholder="邀请码(可不填)" style="line-height: 21px;" /></li>
+                        <li class="username">
+                        	<div class="maxwidth flex"><span>账</span><span>号：</span></div>
+                        	<input type="number" id="username"  placeholder="请输入手机号" style="line-height: 21px;" />
+                        </li>
+                        <li class="validate">
+                        	<div class="maxwidth"><span>邀请账号：</span></div>
+                        	<input type="number" id="valid" placeholder="邀请账号(可不填)" style="line-height: 21px;" />
+                        </li>
                     </ul>
                     <a href="javascript:void(0);" class="btn bg_items mt33" id="loginbtn">登 录</a>
                 </div>
