修改登录禁用提示

--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -104,7 +104,7 @@
             <div link="{#link#}" class="product" style="width: 33.3%;float: left;">
                 <dl>
                     <dt><img src="{#img#}"/></dt>
-                    <dd class="items_price">￥ {#exchangePrice#}</dd>
+                    <dd class="items_price">{#exchangePrice#} 换呗</dd>
                     <dd class='productName'>{#productName#}</dd>
                 </dl>
             </div>
