--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -21,7 +21,7 @@
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
                     <div class="home_head_info">
                         <a href="javascript:void(0)" class="mobilenum" id="nickName" style="font-size: 19px;"></a>
-                        <h1 style="font-size: 15px;margin: 20px 0 0 2px;text-align: left;padding-left: 29px;"><span id="jifen">0</span> 积分</h1>
+                        <h1 style="font-size: 15px;margin: 20px 0 0 2px;text-align: left;padding-left: 29px;"><span id="jifen">0</span> 换呗</h1>
                     </div>
                     <a href="javascript:location.href='guide.html?channelId='+$.func.getUrlParam('channelId')" style="float: right;margin-top: 25px;">
                         <img src='../images/newuser.png' style="width: 63px;" />
@@ -87,6 +87,14 @@
                 <a href="javascript:location.href='order_query.html?channelId='+$.func.getUrlParam('channelId')" class="ablock">
                     <div class="inner home_top_con clearfix">
                         <span class="home_leftcon fl bind fz16">订单查询</span>
+                        <i class="home_rightico fr"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="home_infolist mb5" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
+                <a href="javascript:location.href='order_query.html?channelId='+$.func.getUrlParam('channelId')" class="ablock">
+                    <div class="inner home_top_con clearfix">
+                        <span class="home_leftcon fl help fz16">帮助中心</span>
                         <i class="home_rightico fr"></i>
                     </div>
                 </a>
