--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -32,7 +32,6 @@
         <div class="wraper">
             <div class="home_item">
                 <div class="itemtitle" style="margin-top: 4px;">
-                    <div style="width: 3px;height: 16px;background-color: #01c6fa;float: left;position: relative;top: 13px;left: 12px;"></div>
                     <div class="inner clearfix" style="border-bottom:1px #ddd solid;border-top:1px #ddd solid;background-color: white;">
                         <span class="fl item_title_r_name" style="font-size: 16px;">兑换商品</span>
                         <a href="javascript:location.href='allgoods.html?channelId='+$.func.getUrlParam('channelId')" class="fr color_items more" >查看更多</a>
@@ -44,7 +43,7 @@
             <div class="home_exchange" style="background-color: white;">
                 <div class="inner" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
                     <div class="title" style="padding-top: 0.8rem;">
-                        <h1>兑换</h1>
+                        <h1 class="">兑换</h1>
                     </div>
                     <div class="con clearfix">
                         <div class="home_select_type">
