--- a/webroot/mobile/html/jifen/html/order_query.html
+++ b/webroot/mobile/html/jifen/html/order_query.html
@@ -35,8 +35,9 @@
             <div class="order_r_box">
                 <div class="l_order_des">
                     <h3>{#productName#}</h3>
-                    <span class="mb5">虚拟货币 &nbsp;&nbsp;: <i class="color_org">￥ {#price#}</i></span>
+                    <span class="mb5">消耗换呗 &nbsp;&nbsp;: <i class="color_org">{#price#}</i></span>
                     <span class="mb5">订单状态 &nbsp;&nbsp;: <i class="color_org">{#order_status#}</i></span>
+                    <span class="mb5">订单单号 &nbsp;&nbsp;: <i class="color_org">{#order_no#}</i></span>
                     <span>订单日期  &nbsp;&nbsp;: <i class="color_gray">{#orderTime#}</i></span>
                 </div>
             </div>
