--- a/webroot/mobile/html/jifen/html/order_query.html
+++ b/webroot/mobile/html/jifen/html/order_query.html
@@ -37,7 +37,7 @@
                     <h3>{#productName#}</h3>
                     <span class="mb5">消耗换呗 &nbsp;&nbsp;: <i class="color_org">{#price#}</i></span>
                     <span class="mb5">订单状态 &nbsp;&nbsp;: <i class="color_org">{#order_status#}</i></span>
-                    <span class="mb5">订单单号 &nbsp;&nbsp;: <i class="color_org">{#order_no#}</i></span>
+                    <span class="mb5">订单单号 &nbsp;&nbsp;: <i class="color_org">{#orderId#}</i></span>
                     <span>订单日期  &nbsp;&nbsp;: <i class="color_gray">{#orderTime#}</i></span>
                 </div>
             </div>
