--- a/webroot/mobile/html/jifen/html/exchange_cash.html
+++ b/webroot/mobile/html/jifen/html/exchange_cash.html
@@ -42,6 +42,19 @@
                     <a href="javascript:void(0);" class="btn bg_items mt37" id="submit">提交</a>
                 </div>
             </div>
+            <div style="margin: 35px 33px;">
+                <div style="color:#e9772a;font-size: 14px;">温馨提示：</div>
+                <div class="cash-tips">1、使用微信号提现的用户，我们的工作人员会在1个工作日内添加您微信好友，届时请注意信息，或者您也可以加我们的微信（<span style="color:#e9772a;">w18576673931</span>），注明来意，工作人员确认订单后会给您付款，感谢您的配合；</div>
+                <div class="cash-tips">2、使用支付宝账号的用户，请确认好账号，我们工作人员会直接向您打款，如果出现损失，由用户自行承担，感谢您的配合；</div>
+                <div class="cash-tips">3、如遇节假日，可能会延迟，届时请耐心等候，感谢您的配合。</div>
+            </div>
+            <div class="tips" style="display:none">
+                <div class="tips_des">
+                    <h1 id="chargeStatus">兑换失败</h1>
+                    <p id="chargeTips">请重新发送短信</p>
+                    <span class="closed"></span>
+                </div>
+            </div>
         </div>
         <script>
             $('.nochoose').on('click', function () {
