--- a/webroot/mobile/html/jifen/html/exchange_cash.html
+++ b/webroot/mobile/html/jifen/html/exchange_cash.html
@@ -50,7 +50,7 @@
             </div>
             <div class="tips" style="display:none">
                 <div class="tips_des">
-                    <h1 id="chargeStatus">兑换失败</h1>
+                    <h1 id="chargeStatus"></h1>
                     <p id="chargeTips">请重新发送短信</p>
                     <span class="closed"></span>
                 </div>
