--- a/webroot/mobile/html/jifen/html/help.html
+++ b/webroot/mobile/html/jifen/html/help.html
@@ -43,11 +43,13 @@
         					<i class="arrow"></i>
         				</div>
         				<div class="con inner">
-        					<p>1.代金券有效期不超过90天</p>
-        					<p>2.代金券有效期不超过90天代金券有效期不超过90天</p>
-        					<p>3.代金券有效期不超过90天1.代金券有效期不超</p>
-        					<p>4.代金券有效期不超过90天1.代金券有效期不超过90天</p>
-        					<p>5.代金券有效期不超过90天1.代金券有效期不超过90天</p>
+        					<div class="pd10">
+	        					<p>1.代金券有效期不超过90天</p>
+	        					<p>2.代金券有效期不超过90天代金券有效期不超过90天</p>
+	        					<p>3.代金券有效期不超过90天1.代金券有效期不超</p>
+	        					<p>4.代金券有效期不超过90天1.代金券有效期不超过90天</p>
+	        					<p>5.代金券有效期不超过90天1.代金券有效期不超过90天</p>
+        					</div>
         				</div>
         			</li>
         		</ul>
