--- a/webroot/mobile/html/jifen/html/choose_good.html
+++ b/webroot/mobile/html/jifen/html/choose_good.html
@@ -64,7 +64,7 @@
                 window.holdLoad = false;
             }
         });
-        $('#submit').on('tap', function(){
+        $('#submit').on('click', function(){
             var choose = $('input');
             var products = [];
             for(var i=0;i<choose.length;i++){
