--- a/webroot/mobile/html/jifen/html/help.html
+++ b/webroot/mobile/html/jifen/html/help.html
@@ -6,7 +6,7 @@
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title>换积分了-选择商品</title>
+        <title>换积分了-帮助中心</title>
         <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
@@ -20,46 +20,144 @@
             </div>
         </header>
         <div class="wraper mt8">
-        	<div class="help_list">
-        		<ul>
-        			<li>
-        				<div class="title inner flex">
-        					<h3>1.代金券有效期不超过90天</h3>
-        					<i class="arrow"></i>
-        				</div>
-        				<div class="con inner">
-        					<div class="pd10">
-	        					<p>1.代金券有效期不超过90天</p>
-	        					<p>2.代金券有效期不超过90天代金券有效期不超过90天</p>
-	        					<p>3.代金券有效期不超过90天1.代金券有效期不超</p>
-	        					<p>4.代金券有效期不超过90天1.代金券有效期不超过90天</p>
-	        					<p>5.代金券有效期不超过90天1.代金券有效期不超过90天</p>
-        					</div>
-        				</div>
-        			</li>
-        			<li>
-        				<div class="title inner flex">
-        					<h3>1.代金券有效期不超过90天</h3>
-        					<i class="arrow"></i>
-        				</div>
-        				<div class="con inner">
-        					<div class="pd10">
-	        					<p>1.代金券有效期不超过90天</p>
-	        					<p>2.代金券有效期不超过90天代金券有效期不超过90天</p>
-	        					<p>3.代金券有效期不超过90天1.代金券有效期不超</p>
-	        					<p>4.代金券有效期不超过90天1.代金券有效期不超过90天</p>
-	        					<p>5.代金券有效期不超过90天1.代金券有效期不超过90天</p>
-        					</div>
-        				</div>
-        			</li>
-        		</ul>
-        	</div>
-         </div> 
-         <script type="text/javascript">
-         	$('.title').on('tap',function(){
-         		$(this).siblings().toggleClass('show');
-         		$(this).children('.arrow').toggleClass('scale')
-         	})
-         </script>
-</body>
+            <div class="help_list">
+                <ul>
+                    <li>
+                        <div class="title inner flex">
+                            <h3>1.代金券使用规则说明</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
+                                <p>3)过期代金券自动作废，不补不退。</p>
+                                <p>4)代金券一经兑换，不退不换。</p>
+                                <p>5)代金券支付金额不开具发票。</p>
+                                <p>6)更多请咨询客服电话95016789。</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title inner flex">
+                            <h3>2.代金券支付说明</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
+                                <p>3)过期代金券自动作废，不补不退。</p>
+                                <p>4)代金券一经兑换，不退不换。</p>
+                                <p>5)代金券支付金额不开具发票。</p>
+                                <p>6)更多请咨询客服电话95016789。</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title inner flex">
+                            <h3>3.考拉积分相关说明</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
+                                <p>3)过期代金券自动作废，不补不退。</p>
+                                <p>4)代金券一经兑换，不退不换。</p>
+                                <p>5)代金券支付金额不开具发票。</p>
+                                <p>6)更多请咨询客服电话95016789。</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title inner flex">
+                            <h3>4.积分兑换相关说明</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
+                                <p>3)过期代金券自动作废，不补不退。</p>
+                                <p>4)代金券一经兑换，不退不换。</p>
+                                <p>5)代金券支付金额不开具发票。</p>
+                                <p>6)更多请咨询客服电话95016789。</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title inner flex">
+                            <h3>5.如何支付？</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
+                                <p>3)过期代金券自动作废，不补不退。</p>
+                                <p>4)代金券一经兑换，不退不换。</p>
+                                <p>5)代金券支付金额不开具发票。</p>
+                                <p>6)更多请咨询客服电话95016789。</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title inner flex">
+                            <h3>6.为什么支付时不用支付密码？</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
+                                <p>3)过期代金券自动作废，不补不退。</p>
+                                <p>4)代金券一经兑换，不退不换。</p>
+                                <p>5)代金券支付金额不开具发票。</p>
+                                <p>6)更多请咨询客服电话95016789。</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title inner flex">
+                            <h3>7.若账户余额为0，还能支付吗？</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
+                                <p>3)过期代金券自动作废，不补不退。</p>
+                                <p>4)代金券一经兑换，不退不换。</p>
+                                <p>5)代金券支付金额不开具发票。</p>
+                                <p>6)更多请咨询客服电话95016789。</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title inner flex">
+                            <h3>8.账户余额不足订单金额时，还能支付吗？</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
+                                <p>3)过期代金券自动作废，不补不退。</p>
+                                <p>4)代金券一经兑换，不退不换。</p>
+                                <p>5)代金券支付金额不开具发票。</p>
+                                <p>6)更多请咨询客服电话95016789。</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div> 
+        <script type="text/javascript">
+            $('.title').on('click', function () {
+                $(this).siblings().toggleClass('show');
+                $(this).children('.arrow').toggleClass('scale')
+            })
+        </script>
+    </body>
 </html>
