--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="home_infolist mb5" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
-                <a href="javascript:location.href='order_query.html?channelId='+$.func.getUrlParam('channelId')" class="ablock">
+                <a href="javascript:location.href='help.html?channelId='+$.func.getUrlParam('channelId')" class="ablock">
                     <div class="inner home_top_con clearfix">
                         <span class="home_leftcon fl help fz16">帮助中心</span>
                         <i class="home_rightico fr"></i>
