--- a/webroot/mobile/html/jifen/html/exchange_cash.html
+++ b/webroot/mobile/html/jifen/html/exchange_cash.html
@@ -50,8 +50,8 @@
             </div>
             <div class="tips" style="display:none">
                 <div class="tips_des">
-                    <h1 id="chargeStatus"></h1>
-                    <p id="chargeTips">请重新发送短信</p>
+                    <h1 id="chargeStatus" class="success"></h1>
+                    <p id="chargeTips">您的提现已成功提交，我们会在1个工作日内处理您的申请，处理后3-5个工作日到账，请留意查收！</p>
                     <span class="closed"></span>
                 </div>
             </div>
@@ -65,6 +65,10 @@
                     $(this).siblings().removeClass('choose');
                     $('input[name="type"]').val($(this).attr('payType'));
                 }
+            });
+            
+            $('.closed').on('click', function () {
+                $('.tips').hide();
             });
 
             $('#submit').on('click', function () {
