--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -16,11 +16,11 @@
     <body>
         <header style="height: 173px;padding: 0;">
             <div class="inner">
-                <h1 class="home_head" style="font-size: 22px;"><span class='title'>换积分了</span><a href="javascript:location.href='login.html?channelId='+$.func.getUrlParam('channelId')" class="quit_login fr">退出登录</a></h1>
+                <h1 class="home_head" style="font-size: 22px;"><span class='title'>换积分了</span><a href="javascript:location.href='login.html?channelId='+$.func.getUrlParam('channelId')" class="quit_login fr">去登录</a></h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
                     <div class="home_head_info">
-                        <a href="javascript:void(0)" class="mobilenum" id="nickName" style="font-size: 19px;"></a>
+                        <a href="javascript:void(0)" class="mobilenum" id="nickName" style="font-size: 19px;">游客</a>
                         <h1 style="font-size: 15px;margin: 20px 0 0 2px;text-align: left;padding-left: 29px;"><span id="jifen">0</span> 换呗</h1>
                     </div>
                     <a href="javascript:location.href='guide.html?channelId='+$.func.getUrlParam('channelId')" style="float: right;margin-top: 25px;">
@@ -120,12 +120,12 @@
         <option value="{##}">20.0</option>
     </script>
     <script type="text/javascript">
-        if (!$.func.getCookie('phone')) {
-            location.href = 'login.html?channelId=' + $.func.getUrlParam('channelId');
+        if ($.func.getCookie('phone')) {
+            $('#nickName').html($.func.getCookie('phone'));
+            var src = $.func.getCookie('headImgUrl') === null ? $.func.getCookie('headImgUrl') : '../images/tx.png';
+            $('#avatar').attr('src', src);
+            $('.quit_login').html('退出登录');
         }
-        $('#nickName').html($.func.getCookie('phone'));
-        var src = $.func.getCookie('headImgUrl') === null ? $.func.getCookie('headImgUrl') : '../images/tx.png';
-        $('#avatar').attr('src', src);
         $.func.homePageProduct();
 
         $('.submitbtn').on('click', function () {
@@ -157,6 +157,11 @@
         $(function () {
             $('#chargePhone').bind('input propertychange', function () {
                 //alert($(this).val());
+                if (!$.func.getCookie('phone')) {
+                    alert('请先登录');
+                    location.href = 'login.html?channelId=' + $.func.getUrlParam('channelId');
+                    return false;
+                }
                 if ($(this).val().length >= 11) {
                     var reg = /^0?1[3|4|5|7|8][0-9]\d{8}$/;
                     if (!reg.test($(this).val())) {
