--- a/webroot/mobile/html/jifen/html/login.html
+++ b/webroot/mobile/html/jifen/html/login.html
@@ -18,7 +18,7 @@
             <div class="inner">
                 <h1>
                     <span style="padding-left: 42px;">登录</span>
-                    <a href="javascript:location.href='login.html?channelId='+$.func.getUrlParam('channelId')" class="quit_login fr">去登录</a>
+                    <a href="javascript:location.href='register.html?channelId='+$.func.getUrlParam('channelId')" class="quit_login fr">去注册</a>
                 </h1>
             </div>
         </header>
@@ -32,11 +32,11 @@
                         </li>
                         <li class="validate">
                         	<div class="maxwidth"><span>密码：</span></div>
-                        	<input type="number" id="valid" placeholder="请输入密码" style="line-height: 21px;" />
+                        	<input type="password" id="valid" placeholder="请输入密码" style="line-height: 21px;" />
                         </li>
                     </ul>
                     <a href="javascript:void(0);" class="btn bg_items mt33" id="loginbtn">登 录</a>
-                    <a href="javascript:location.href='register.html?channelId='+$.func.getUrlParam('channelId')" class="btn bg_items" style="margin-top: 20px;">注册</a>
+                    <a href="javascript:location.href='reset_pwd.html?channelId='+$.func.getUrlParam('channelId')" class="btn" style="color: #5e5e5e;">忘记密码？</a>
                 </div>
             </div>
         </div>
