--- a/webroot/mobile/html/news.html
+++ b/webroot/mobile/html/news.html
@@ -58,6 +58,7 @@
 					</div>	
 					<div class="sec-news-r">
 						<img src="../images/newspic.png"/>
+						<span class="firstnews">置顶</span>
 					</div>
 				</a>
 				<div class="news-bottom clearfix">
