--- a/webroot/mobile/html/meet-booking.html
+++ b/webroot/mobile/html/meet-booking.html
@@ -41,13 +41,13 @@
 					
 					<li>
 						<i>请简略介绍需求(10-300字)</i>
-						<textarea></textarea>
+						<input type="text" placeholder='若有提前说明事项，请输入' />
 						<i class="m-tips"><b class="iconfont"></b>详细的介绍能让专家更加了解你<span>你填的信息只有专家能看到，不会公开给其它人</span></i>
 					</li>
 				</ul>
 			</div>
 			</section>
-			<a href="pay-success.html" class="nextstep">立即约见</a>
+			<a href="pay-success.html" class="f-bottom">立即约见</a>
 		</div>
 
 	</body>
